--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
@@ -453,6 +453,6 @@
   </footer>
 
   <!-- JS -->
-  <script src="js/main.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
